Move generate_compatibility_matrices into tools/
Signed-off-by: Ben Firshman <ben@firshman.co.uk>

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -30,12 +30,12 @@ archives:
       386: i386
       amd64: x86_64
 checksum:
-  name_template: 'checksums.txt'
+  name_template: "checksums.txt"
 snapshot:
   name_template: "{{ .Tag }}-next"
 changelog:
   sort: asc
   filters:
     exclude:
-      - '^docs:'
-      - '^test:'
+      - "^docs:"
+      - "^test:"
