--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
     "files.insertFinalNewline": true,
     "files.trimFinalNewlines": true,
     "go.coverOnTestPackage": false,
-    "go.lintTool": "golangci-lint"
+    "go.lintTool": "golangci-lint",
+    "go.formatTool": "goimports",
 }
