--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -23,7 +23,8 @@ builds:
       - arm64
     main: ./cmd/cog/cog.go
 archives:
-  - replacements:
+  - format: binary
+    replacements:
       darwin: Darwin
       linux: Linux
       windows: Windows
