Simplify release filename
Signed-off-by: Ben Firshman <ben@firshman.co.uk>

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -23,6 +23,7 @@ builds:
     main: ./cmd/cog/cog.go
 archives:
   - format: binary
+    name_template: "{{ .ProjectName }}_{{ .Os }}_{{ .Arch }}"
     replacements:
       darwin: Darwin
       linux: Linux
