--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -60,13 +60,13 @@ jobs:
         run: make test-cog-library
 
   # cannot run this on mac due to licensing issues: https://github.com/actions/virtual-environments/issues/2150
-  test-end-to-end:
-    name: "Test (end to end)"
+  test-integration:
+    name: "Test (integration)"
     runs-on: ubuntu-20.04
     defaults:
       run:
         shell: bash
-        working-directory: end-to-end-test
+        working-directory: test-integration
     steps:
       - uses: actions/checkout@master
       - uses: actions/setup-go@v2
@@ -85,7 +85,7 @@ jobs:
       - uses: actions/cache@v2
         with:
           path: ~/.cache/pip
-          key: pip-${{ hashFiles('**/end-to-end-test/requirements.txt') }}
+          key: pip-${{ hashFiles('**/test-integration/requirements.txt') }}
           restore-keys: |
             pip-${{ secrets.CACHE_VERSION }}-
       - name: Install
@@ -96,14 +96,14 @@ jobs:
         run: make test
 
   main-trigger:
-    needs: [test, test-end-to-end]
+    needs: [test, test-integration]
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
       - run: ${{ secrets.MAIN_TRIGGER }}
 
   release:
-    needs: [test, test-end-to-end]
+    needs: [test, test-integration]
     if: startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
     steps:
