--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -120,6 +120,8 @@ jobs:
       - uses: actions/setup-go@v2
         with:
           go-version: 1.16
+      - name: Build dependencies
+        run: make build-dependencies
       - uses: goreleaser/goreleaser-action@v2
         with:
           version: latest
