update VS Code settings to format on save
Co-Authored-By: Ben Firshman <ben@replicate.com>
Signed-off-by: Zeke Sikelianos <zeke@sikelianos.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,13 @@
   "go.lintTool": "golangci-lint",
   "go.formatTool": "goimports",
   "go.testOnSave": true,
+  "python.formatting.provider": "black",
+  "python.languageServer": "Pylance",
   "python.testing.pytestArgs": ["-vvv", "python"],
   "python.testing.unittestEnabled": false,
-  "python.testing.pytestEnabled": true
+  "python.testing.pytestEnabled": true,
+  "[python]": {
+    "editor.defaultFormatter": "ms-python.python",
+    "editor.formatOnSave": true
+  },
 }
