--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -33,3 +33,9 @@ changelog:
     exclude:
       - "^docs:"
       - "^test:"
+release:
+  # If set to auto, will mark the release as not ready for production
+  # in case there is an indicator for this in the tag e.g. v1.0.0-alpha
+  # If set to true, will mark the release as not ready for production.
+  # Default is false.
+  prerelease: auto
