--- a/pkg/cli/init-templates/cog.yaml
+++ b/pkg/cli/init-templates/cog.yaml
@@ -6,7 +6,7 @@ build:
   gpu: false
 
   # a list of ubuntu apt packages to install
-  system_packages:
+  # system_packages:
     # - "libgl1-mesa-glx"
     # - "libglib2.0-0"
 
@@ -14,13 +14,13 @@ build:
   python_version: "3.8"
 
   # a list of packages in the format <package-name>==<version>
-  python_packages:
+  # python_packages:
     # - "numpy==1.19.4"
     # - "torch==1.8.0"
     # - "torchvision==0.9.0"
   
   # commands run after the environment is setup
-  run:
+  # run:
     # - "echo env is ready!"
     # - "echo another command if needed"
 
