--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,4 +1,5 @@
 fastapi==0.70.1
+mypy==0.950
 numpy==1.21.5
 pillow==9.0.1
 pydantic==1.8.2
@@ -7,6 +8,8 @@ PyYAML==5.4.1
 redis==4.1.0
 requests==2.25.1
 responses==0.16.0
+types-requests==2.25.1
+types-PyYAML==5.4.1
+types-redis==4.1.0
 uvicorn[standard]==0.16.0
 wheel==0.36.2
-
