--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,6 +4,7 @@ numpy==1.21.5
 pillow==9.0.1
 pydantic==1.8.2
 pytest==6.2.4
+pytest-httpserver==1.0.4
 PyYAML==5.4.1
 redis==4.1.0
 requests==2.25.1
