Satisfy the mypy gods
Adds type annotations to all of the code we added!

Signed-off-by: Nick Stenning <nick@whiteink.com>

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,5 +1,7 @@
 [mypy]
 disallow_untyped_defs = True
+# TODO: remove this and bring the codebase inline with the current mypy default
+no_implicit_optional = False
 
 [mypy-opentelemetry.*]
 ignore_missing_imports = True
