Add user-agent to webhook calls
This will make it easier to track the rollout of this new worker code.
In future, we'll probably want the version to include more detail than
just the package version, which is not currently set correctly.

I've also split the webhook caller code into its own package and added a
few tests.

Signed-off-by: Nick Stenning <nick@whiteink.com>

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -10,9 +10,10 @@ pytest-httpserver==1.0.4
 PyYAML==5.4.1
 redis==4.1.0
 requests==2.25.1
-responses==0.16.0
+responses==0.22.0
 types-requests==2.25.1
 types-PyYAML==5.4.1
 types-redis==4.1.0
+types-setuptools==65.5.0.2
 uvicorn[standard]==0.16.0
 wheel==0.36.2
