Don't pin dependencies that are unpinned in setup.py
Pinning dependencies in requirements-dev.txt more strictly than we do in
cog's setup.py gives us a false sense of security about whether recent
updates to those dependencies have broken anything.

Development installations should use

  pip install -e python -r requirements-dev.txt

Signed-off-by: Nick Stenning <nick@whiteink.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,7 +33,7 @@ jobs:
           restore-keys: |
             pip-${{ secrets.CACHE_VERSION }}-
       - name: Install Python dependencies
-        run: pip install -r requirements-dev.txt
+        run: pip install -e python -r requirements-dev.txt
       - uses: actions/cache@v2
         with:
           path: ~/go/pkg/mod
@@ -68,7 +68,7 @@ jobs:
           restore-keys: |
             pip-${{ secrets.CACHE_VERSION }}-
       - name: Install Python dependencies
-        run: pip install -r requirements-dev.txt
+        run: pip install -e python -r requirements-dev.txt
       - name: Test
         run: make test-python
         env:
