--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,19 +1,13 @@
-attrs==22.1.0
-fastapi==0.70.1
 hypothesis==6.56.4
+httpx==0.23.1
 mypy==0.990
 numpy==1.21.5
 pillow==9.3.0
-pydantic==1.8.2
 pytest==6.2.4
 pytest-httpserver==1.0.4
-PyYAML==5.4.1
-redis==4.1.0
-requests==2.25.1
 responses==0.22.0
 types-requests==2.25.1
 types-PyYAML==5.4.1
 types-redis==4.1.0
 types-setuptools==65.5.0.2
-uvicorn[standard]==0.16.0
 wheel==0.36.2
