--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,10 +17,11 @@ jobs:
       run:
         shell: bash
     steps:
-      - uses: actions/checkout@master
-      - uses: actions/setup-go@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-go@v3
         with:
-          go-version: 1.19
+          go-version-file: go.mod
+          cache: true
       - name: Setup Python
         uses: actions/setup-python@v2
         with:
@@ -78,10 +79,11 @@ jobs:
     name: "Test integration"
     runs-on: ubuntu-20.04
     steps:
-      - uses: actions/checkout@master
-      - uses: actions/setup-go@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-go@v3
         with:
-          go-version: 1.19
+          go-version-file: go.mod
+          cache: true
       - name: Setup Python
         uses: actions/setup-python@v2
         with:
@@ -109,12 +111,13 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - uses: actions/setup-go@v2
+      - uses: actions/setup-go@v3
         with:
-          go-version: 1.19
+          go-version-file: go.mod
+          cache: true
       - name: Build dependencies
         run: make build-dependencies
       - uses: goreleaser/goreleaser-action@v2
