Configure Cog python package version from git
This commit allows the Cog python package to derive its own version from
git metadata and bake that into the installed package.

To do this, we first update the Cog python package over to
`pyproject.toml` rather than `setup.py` (as is recommended for modern
packages[1]) and then use setuptools_scm[2] to define the version
dynamically.

This should mean that versions work correctly:

- on tagged releases
- in development
- when installed directly from git
- when installed from a git archive zip/tarball

[1]: https://pip.pypa.io/en/stable/reference/build-system/pyproject-toml/
[2]: https://github.com/pypa/setuptools_scm

Signed-off-by: Nick Stenning <nick@whiteink.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -130,10 +130,10 @@ jobs:
         run: |
           # clean package built for go client
           rm -rf python/dist
-          # set version
-          sed -i -E "s/0.0.1/${GITHUB_REF_NAME:1}/" python/setup.py
+          # install build
+          pip install build
           # build package
-          cd python && python setup.py bdist_wheel
+          python -m build python/ --wheel
       - name: Push Python package
         uses: pypa/gh-action-pypi-publish@master
         with:
