--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,7 +2,13 @@ name: CI
 
 on:
   push:
+    branches:
+      - main
+    tags:
+      - '**'
   pull_request:
+    branches:
+      - main
 
 jobs:
   test:
