--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,7 +2,8 @@ build==0.9.0
 hypothesis==6.56.4
 httpx==0.23.1
 mypy==0.990
-numpy==1.21.5
+numpy==1.21.6; python_version == '3.7'
+numpy==1.24.1; python_version > '3.7'
 pillow==9.3.0
 pytest==7.2.0
 pytest-httpserver==1.0.6
