--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "PyYAML",
     "redis>=4,<5",
     "requests>=2,<3",
+    "structlog>=20,<23",
     "typing_extensions>=4.1.0",
     "uvicorn[standard]>=0.12,<1",
 ]
