--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -113,7 +113,10 @@ jobs:
         run: make test-integration
 
   release:
-    needs: [test, test-integration]
+    needs:
+      - test
+      - test-python
+      - test-integration
     if: startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest-8-cores
     steps:
