Update CI workflow (#1017)
* Use actions/checkout@v3

Signed-off-by: Mattt Zmuda <mattt@replicate.com>

* Use actions/setup-python@v3

Signed-off-by: Mattt Zmuda <mattt@replicate.com>

* Use actions/setup-go@v4

Signed-off-by: Mattt Zmuda <mattt@replicate.com>

* Run pip install on one line

Signed-off-by: Mattt Zmuda <mattt@replicate.com>

---------

Signed-off-by: Mattt Zmuda <mattt@replicate.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,28 +24,15 @@ jobs:
         shell: bash
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-go@v3
+      - uses: actions/setup-go@v4
         with:
           go-version-file: go.mod
-          cache: true
-      - name: Setup Python
-        uses: actions/setup-python@v2
+      - uses: actions/setup-python@v3
         with:
           python-version: 3.8
-      - uses: actions/cache@v2
-        with:
-          path: ~/.cache/pip
-          key: pip-${{ hashFiles('**/requirements-dev.txt') }}
-          restore-keys: |
-            pip-${{ secrets.CACHE_VERSION }}-
+          cache: "pip"
       - name: Install Python dependencies
         run: pip install -e python -r requirements-dev.txt
-      - uses: actions/cache@v2
-        with:
-          path: ~/go/pkg/mod
-          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-          restore-keys: |
-            ${{ runner.os }}-go-${{ secrets.CACHE_VERSION }}-
       - name: Build
         run: make cog
       - name: Test
@@ -62,17 +49,11 @@ jobs:
       run:
         shell: bash
     steps:
-      - uses: actions/checkout@master
-      - name: Setup Python
-        uses: actions/setup-python@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
-      - uses: actions/cache@v2
-        with:
-          path: ~/.cache/pip
-          key: pip-${{ hashFiles('**/requirements-dev.txt') }}
-          restore-keys: |
-            pip-${{ secrets.CACHE_VERSION }}-
+          cache: "pip"
       - name: Install Python dependencies
         run: pip install -e python -r requirements-dev.txt
       - name: Test
@@ -86,29 +67,15 @@ jobs:
     runs-on: ubuntu-latest-16-cores
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-go@v3
+      - uses: actions/setup-go@v4
         with:
           go-version-file: go.mod
-          cache: true
-      - name: Setup Python
-        uses: actions/setup-python@v2
+      - uses: actions/setup-python@v3
         with:
           python-version: 3.8
-      - uses: actions/cache@v2
-        with:
-          path: ~/go/pkg/mod
-          key: go-${{ hashFiles('**/go.sum') }}
-          restore-keys: |
-            go-${{ secrets.CACHE_VERSION }}-
-      - uses: actions/cache@v2
-        with:
-          path: ~/.cache/pip
-          key: pip-${{ hashFiles('**/requirements-dev.txt') }}
-          restore-keys: |
-            pip-${{ secrets.CACHE_VERSION }}-
+          cache: "pip"
       - name: Install Python dependencies
-        run: |
-          pip install -r requirements-dev.txt
+        run: pip install -r requirements-dev.txt
       - name: Test
         run: make test-integration
 
@@ -125,10 +92,9 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - uses: actions/setup-go@v3
+      - uses: actions/setup-go@v4
         with:
           go-version-file: go.mod
-          cache: true
       - name: Build
         run: make cog
       - uses: goreleaser/goreleaser-action@v2
