--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,10 @@ Untitled*.ipynb
 __pycache__
 .cog
 .hypothesis/
+build
 dist
 *.egg-info
 pkg/dockerfile/embed/cog.whl
-python/build
 # Used by a vim plugin (projectionist)
 .projections.json
 .venv/
