Fix various mypy type checking errors (#1061)
* Fix Signature of "unlink" incompatible with supertype "Path"

Signed-off-by: Mattt Zmuda <mattt@replicate.com>

* Fix Function is missing a type annotation for one or more arguments

Signed-off-by: Mattt Zmuda <mattt@replicate.com>

* Fix optionality of shutdown_event

Signed-off-by: Mattt Zmuda <mattt@replicate.com>

* Ignore Possible overload variants note for create_model

Signed-off-by: Mattt Zmuda <mattt@replicate.com>

* Ignore types for log_renderer assignment

Signed-off-by: Mattt Zmuda <mattt@replicate.com>

* Add pydantic.mypy plugin to mypy configuration

Signed-off-by: Mattt Zmuda <mattt@replicate.com>

* Add missing check for cancellation in test_heartbeats_cancel

Signed-off-by: Mattt Zmuda <mattt@replicate.com>

---------

Signed-off-by: Mattt Zmuda <mattt@replicate.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ dynamic = ["version"]
 write_to = "python/cog/_version.py"
 
 [tool.mypy]
+plugins = "pydantic.mypy"
 disallow_untyped_defs = true
 # TODO: remove this and bring the codebase inline with the current mypy default
 no_implicit_optional = false
