Fix warning 'Input 'packages_dir' has been deprecated with message: The inputs have been normalized to use kebab-case. Use `packages-dir` instead.'
Signed-off-by: Mattt Zmuda <mattt@replicate.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -125,4 +125,4 @@ jobs:
         with:
           user: __token__
           password: ${{ secrets.PYPI_TOKEN }}
-          packages_dir: dist
+          packages-dir: dist
