Configure CI workflow for merge queues
Signed-off-by: Mattt Zmuda <mattt@replicate.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,7 +9,11 @@ on:
   pull_request:
     branches:
       - main
-
+  merge_group:
+    branches:
+      - main
+    types:
+      - checks_requested
 jobs:
   test-go:
     name: "Test Go"
