Update VSCode recommended extensions and settings (#1119)
* Update list of recommended extensions

Signed-off-by: Mattt Zmuda <mattt@replicate.com>

* Configure Black as default formatter

Enable Ruff autofix on save

Signed-off-by: Mattt Zmuda <mattt@replicate.com>

* Run black formatter

Signed-off-by: Mattt Zmuda <mattt@replicate.com>

* Ignore S603 and S607 in test-integration

Signed-off-by: Mattt Zmuda <mattt@replicate.com>

* Fix ruff violation in is_port_in_use

Signed-off-by: Mattt Zmuda <mattt@replicate.com>

---------

Signed-off-by: Mattt Zmuda <mattt@replicate.com>

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,10 @@
 {
   "recommendations": [
-    "golang.go"
+    "charliermarsh.ruff",
+    "esbenp.prettier-vscode",
+    "golang.go",
+    "ms-python.black-formatter",
+    "ms-python.python",
+    "ms-python.vscode-pylance"
   ]
 }
