Rerun flaky integration tests (#1152)
* Add pytest-rerunfailures dev dependency

Signed-off-by: Mattt Zmuda <mattt@replicate.com>

* Run test-integration with --reruns 5

Signed-off-by: Mattt Zmuda <mattt@replicate.com>

* Remove unused redis dependency in test-integration

Signed-off-by: Mattt Zmuda <mattt@replicate.com>

---------

Signed-off-by: Mattt Zmuda <mattt@replicate.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ optional-dependencies = { "dev" = [
   "pillow",
   "pytest",
   "pytest-httpserver",
+  "pytest-rerunfailures",
   "pytest-xdist",
   "responses",
   "ruff",
