--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,7 +33,7 @@ jobs:
           go-version-file: go.mod
       - uses: actions/setup-python@v3
         with:
-          python-version: 3.8
+          python-version: 3.11
           cache: "pip"
       - name: Install Python dependencies
         run: |
@@ -50,7 +50,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
     defaults:
       run:
         shell: bash
@@ -80,7 +80,7 @@ jobs:
           go-version-file: go.mod
       - uses: actions/setup-python@v3
         with:
-          python-version: 3.8
+          python-version: 3.11
           cache: "pip"
       - name: Install Python dependencies
         run: |
