--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -34,10 +34,9 @@ jobs:
       - uses: actions/setup-python@v3
         with:
           python-version: 3.11
-          cache: "pip"
       - name: Install Python dependencies
         run: |
-          python -m pip install -r requirements.txt -r requirements-dev.txt .
+          python -m pip install -r requirements-dev.txt .
           yes | python -m mypy --install-types replicate || true
       - name: Build
         run: make cog
@@ -59,10 +58,9 @@ jobs:
       - uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
-          cache: "pip"
       - name: Install Python dependencies
         run: |
-          python -m pip install -r requirements.txt -r requirements-dev.txt .
+          python -m pip install -r requirements-dev.txt .
           yes | python -m mypy --install-types replicate || true
       - name: Test
         run: make test-python
@@ -81,10 +79,9 @@ jobs:
       - uses: actions/setup-python@v3
         with:
           python-version: 3.11
-          cache: "pip"
       - name: Install Python dependencies
         run: |
-          python -m pip install -r requirements.txt -r requirements-dev.txt .
+          python -m pip install -r requirements-dev.txt .
           yes | python -m mypy --install-types replicate || true
       - name: Test
         run: make test-integration
